# sre-scripts

./: .gitignore  LICENSE
aws-db-import/: Makefile  go.mod  go.sum  main.go
aws-db-import/.devcontainer/: devcontainer.Dockerfile  devcontainer.json  docker-compose.yml
aws-db-import/bootstrap/: bootstrap.go  gin_router.go
aws-db-import/bootstrap/config/: config.go  config_schema.go
aws-db-import/bootstrap/constants/: constants.go
aws-db-import/configs/: config.yaml
aws-db-import/pkg/middlewares/: gin_health.go  gin_logger.go  gin_request_id.go
capacity-benchmarking/: ip-ranges-cb.py  pyproject.toml
check-reserved-instances/: check-rds-ri.py  pyproject.toml
dump-hashicorp-vault-secrets/: script.sh
rds-slow-query-analysis/: main.py  pyproject.toml  sample-config.yaml
rds-slow-query-analysis/parsers/: postgres.py
rds-slow-query-analysis/pkg/: chart.py  rds.py  slack.py
search-query-in-github-codebase/: script.sh
ssm-template/: Dockerfile  Makefile  README.md  example.tpl  go.mod  go.sum  main.go
terraformise-rds/: providers.tf  pyproject.toml  rds.py  upgrade_terraform.py
terraformise-rds/templates/: provider.jinja
