[tool.poetry]
name = "rds-slow-query-analysis"
version = "0.1.0"
description = ""
authors = ["parthw <wparth777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.69"
PyYAML = "^6.0"
slack-sdk = "^3.18.3"
requests = "^2.28.1"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
