[tool.poetry]
name = "terraformise-rds"
version = "0.1.0"
description = ""
authors = ["parthw <wparth777@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.21.21"
requests = "^2.27.1"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
